<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageButton
        android:background="@color/white"
        android:id="@+id/mapButton"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_weight="1"
        android:src="@drawable/ic_geomap"
        android:contentDescription="@string/geomap_desc"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true" />
    <ImageButton
        android:background="@color/white"
        android:id="@+id/socialButton"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_weight="1"
        android:src="@drawable/ic_social"
        android:contentDescription="@string/social_image_desc"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true" />
    <ImageButton
        android:background="@color/white"
        android:id="@+id/newEventButton"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_weight="1"
        android:src="@drawable/ic_add_box"
        android:contentDescription="@string/event_image_desc"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true" />
    <ImageButton
        android:background="@color/white"
        android:id="@+id/quirkListButton"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_weight="1"
        android:src="@drawable/ic_viewlist"
        android:contentDescription="@string/quirklist_image_desc"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true" />
    <ImageButton
        android:background="@color/white"
        android:id="@+id/homeButton"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_weight="1"
        android:src="@drawable/ic_home"
        android:contentDescription="@string/home_image_desc"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true" />
</LinearLayout>
